another attempt to fix white space on footer

--- a/css/styling.css
+++ b/css/styling.css
@@ -5,6 +5,13 @@ body {
   margin: 0;
   padding: 0;
 }
+html,body{
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow: auto;
+}
 
 /* Header */
 
